@@ -106,7 +106,7 @@ if ( ! defined ($oscar_configurator) ) {
     die "ERROR: Impossible to get the OSCAR configuration\n";
 }
 my $oscar_cfg = $oscar_configurator->get_config();
-my $db_type = $oscar_cfg->{'db_type'};
+my $db_type = $oscar_cfg->{'oda_type'};
 
 
 # first try the environmental variable
@@ -155,82 +155,6 @@ if ($db_type eq "db") {
     if (OSCAR::Database::create_database_tables (\%options, \@error_strings)) {
         die "ERROR: Impossible to create the database tables";
     }
-
-
-    ###########################################################################
-    # TODO: Everything between the marks should not actually be there. This   #
-    # code is about the OSCAR initialization, not the database initialization #
-    # so it should be done outside of ODA, during the bootstrapping.          #
-    #                                                                         #
-    #                              Begin Mark                                 #
-    ###########################################################################
-
-    # The env variable $ENV{OSCAR_HEAD_INTERNAL_INTERFACE} should be defined
-    # at wizard_prep. If not, we setup by default (to be eth0).
-    # This is necessary for the embeded script "set_global_oscar_values"
-    $ENV{OSCAR_HEAD_INTERNAL_INTERFACE} = "eth0"
-        if ! exists $ENV{OSCAR_HEAD_INTERNAL_INTERFACE};
-
-    # The "set_global_oscar_values" scripts populates the following
-    # tables: Clusters, Groups, and Status
-    my $cmd;
-    if (defined $ENV{OSCAR_HOME}) {
-        $cmd = "$ENV{OSCAR_HOME}/scripts/set_global_oscar_values ".
-                "--interface $ENV{OSCAR_HEAD_INTERNAL_INTERFACE}";
-    } else {
-        $cmd = $oscar_cfg->{'binaries_path'} . "/set_global_oscar_values ".
-                "--interface " . $oscar_cfg->{'nioscar'};
-    }
-    my $exit_status =
-        system($cmd . ($options{debug}?" --debug":"") )/256;
-    croak("Couldn't initialize the global database values table ($cmd, $exit_status)")
-        if $exit_status;
-
-    print "\nDB_DEBUG>$0:\n===========================((( ".
-          "All the OSCAR global values are set )))===========================\n"
-          if $options{debug};
-
-    # "create_and_populate_basic_node_info" is another embeded script
-    # to populate the "Nodes" table.
-    my $cmd;
-    if (defined $ENV{OSCAR_HOME}) {
-        $cmd = "$ENV{OSCAR_HOME}/scripts/create_and_populate_basic_node_info";
-    } else {
-        $cmd = $oscar_cfg->{'binaries_path'} 
-               . "/create_and_populate_basic_node_info";
-    }
-    $cmd .= ($options{debug}?" --debug":"");
-    my $exit_status = system($cmd)/256;
-    croak("Couldn't set up a default package set") if $exit_status;
-
-    print "\nDB_DEBUG>$0:\n===========================((( ".
-          "All the basic node infos are set  )))===========================\n"
-          if $options{debug};
-
-    # The above two embeded scripts need to run before all the 
-    # data for Packages and Packages related table are populated
-    # because the above tables contain the primary keys which
-    # will be used at the Packages and its related tables.
-    # (i.e., The Packages table and Packages related tables are
-    # dependent on the above tables(Clusters, Groups, Status, and
-    # Nodes) and they can not really insert any data before the 
-    # above tables populate data and generate the primary key
-    # used by the Packages and its sub-tables.
-
-
-    #
-    # Now populate the Packages table with the info from the reachable
-    # repositories.
-    #
-    $cmd = $oscar_cfg->{'binaries_path'} . "/populate_oda_packages_table" 
-           . ($options{debug}?" --debug":"");
-    my $exit_status = system($cmd)/256;
-    croak("ERROR: Couldn't populate packages table") if $exit_status;
-
-    ###########################################################################
-    #                                Mark End                                 #
-    ###########################################################################
-
 
     OSCAR::oda::oda_disconnect( \%options , undef );
 } elsif ($db_type eq "file") {
