@@ -1,4 +1,6 @@
 1.4.12 (not yet released):
+- Fix the confusion between db_type and oda_type when getting data from the
+OSCAR configuration file (reported by Olivier Lahaye).
 - Revisit the initialization of the database: move some tasks that are not ODA
 specific outside of the ODA bootstrapping capability (reported by Olivier
 Lahaye).
